package com.itbird.design.template.demo;

/**
 * 具体的实现者2
 * Created by itbird on 2022/6/16
 */
public class ConcreteImpl2 extends AbsTemplate {
    @Override
    void step1() {

    }

    @Override
    void step2() {

    }

    @Override
    void step3() {

    }
}
