@startuml

title __DEMO's Class Diagram__\n

  namespace com.itbird.design {
    namespace template {
      namespace demo {
        abstract class com.itbird.design.template.demo.AbsTemplate {
            + execute()
            {abstract} ~ step1()
            {abstract} ~ step2()
            {abstract} ~ step3()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace template {
      namespace demo {
        class com.itbird.design.template.demo.ConcreteImpl1 {
            ~ step1()
            ~ step2()
            ~ step3()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace template {
      namespace demo {
        class com.itbird.design.template.demo.ConcreteImpl2 {
            ~ step1()
            ~ step2()
            ~ step3()
        }
      }
    }
  }
  

  com.itbird.design.template.demo.ConcreteImpl1 -up-|> com.itbird.design.template.demo.AbsTemplate
  com.itbird.design.template.demo.ConcreteImpl2 -up-|> com.itbird.design.template.demo.AbsTemplate


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
